[update] 立ち回り検索機能にページネーションを追加
kaminari gemを利用して、Post#search_postにページネーションを実装。
25件を超えるとページを分割し、ページネーションが表示されるように設定

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,8 +1,15 @@
 ja: 
   activerecord: 
     models: 
-      like: イイネ
+      like: いいね
       post: 投稿
       user: ユーザー
     post: 
       description: メモ
+  views:
+    pagination:
+      first: '最初'
+      last: '最後'
+      previous: '前'
+      next: '次'
+      truncate: '...'
