[update] devise のエラーメッセージの日本語化と、デザインを調整
devise のエラーメッセージで日本語化出来ていない部分が残っていたのでja.ymlに追記。
エラーメッセージが見づらかったので、赤文字表記でわかりやすくなるようにcssを調整。

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,8 +4,12 @@ ja:
       like: いいね
       post: 投稿
       user: ユーザー
-    post: 
-      description: メモ
+    attributes:
+      post:
+        description: メモ
+      user:
+        name: ユーザーID
+        nickname: ニックネーム
   views:
     pagination:
       first: '最初'
